# dotpkg

./: .editorconfig  .gitignore  README.md  dotpkg  dotpkg.schema.json  pyproject.toml
.github/workflows/: check-generation.yml  check.yml  publish.yml  test.yml
dotpkg/: __init__.py  __main__.py  commands.py  constants.py  error.py  helpers.py  install.py  log.py  manifest.py  model.py  options.py  prompt.py  resolve.py
dotpkg/manifest/: alias.py  dotpkg.py  installs.py  installs_v1.py  installs_v2.py  installs_v3.py  installs_v4.py
dotpkg/model/: dotpkg.py  installs.py
dotpkg/utils/: file.py  log.py  prompt.py
schemas/: dotpkg.schema.json  installs.schema.json  installs.v1.schema.json  installs.v2.schema.json  installs.v3.schema.json  installs.v4.schema.json
scripts/: generate-models
tests/: fixtures.py  test_copy.py  test_install_manifest_upgrade.py  test_minimal.py  test_target_dir.py
tests/pkgs/copy/: dotpkg.json
tests/pkgs/target-dir/: dotpkg.json  someconfig.json
tests/pkgs/target-dir-basic/: dotpkg.json
tests/pkgs/target-dir-multi/: dotpkg.json
