[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotpkg"
version = "0.0.3"
description = "Package manager for your dotfiles"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = ["Topic :: Utilities"]
keywords = ["package-manager", "dotfiles"]
dependencies = []

[project.urls]
homepage = "https://github.com/fwcd/dotpkg"
repository = "https://github.com/fwcd/dotpkg"

[project.scripts]
dotpkg = "dotpkg:main"

[tool.setuptools.packages]
find = {}

[tool.pyright]
include = ["dotpkg"]
